# sqlite_poc

./: .gitignore  .travis.yml  CMakeLists.txt  config.cpp  config.hpp  database.cpp  database.hpp  database_stmt.cpp  database_stmt.hpp  exec.cpp  main.cpp  readme.md
sqlite3/: CMakeLists.txt
